<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="eslogan">Peregrina á Cedeira máxixa</string>
    <string name="app_name">Cedeira</string>
    <string name="concello">Concello</string>
    <string name="directorio">Directorio</string>
    <string name="web_concello">Web do concello</string>
    <string name="inicio">Inicio</string>
    <string name="cedeira">Cedeira</string>
    <string name="policia">Policía Local</string>
    <string name="centro_saude">Centro de Saude</string>
    <string name="taxi">Servizo de Taxi</string>
    <string name="farmacias">Farmacias</string>
    <string name="cuartel">Cuartel da Garda Civil</string>
    <string name="restauracion">Restauración</string>
    <string name="bares">Bares</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="hoteles">Hoteles</string>
    <string name="gastronomia">Gastronomía</string>
    <string name="webs">Webs de interese</string>
    <string name="title_email">E-mail</string>
    <string name="title_nombre">Nombre y Apellidos</string>
    <string name="title_incidencia">Incidencia o Comentario</string>
    <string name="menu_praias">Praias</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_restaurantes">Restaurantes</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_hoteles">Hoteles</string>
    <string name="menu_miradores">Miradoiros</string>
    <string name="menu_patrimonio">Patrimonio</string>
    <string name="menu_rutas">Rutas</string>
    <string name="menu_hosteleria">Hostelería</string>
    <string name="turismo_cedeira">Turismo Cedeira</string>
    <string name="mapa_google">Google Map</string>
    <string name="turismo">Turismo</string>
    <string name="San_andres">San Andrés</string>
    <string name="qr">Lector QR</string>
    <string name="actualidade">Actualidade</string>
    <string name="participa">Participa</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_galeria">MainGaleria</string>
    <string name="title_gastronimia">Gastronomía</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_concello">MainConcello</string>
    <string name="Sentir_marinero">O sentir mariñeiro</string>
    <string name="direcc_concello">Rúa Real nº15</string>
    <string name="direcc_centro_saude">Avenida Zumalacárregui nº11</string>
    <string name="direcc_taxi">Desde calquer punto a túa disposición</string>
    <string name="direcc_farmacias">Rúa Ezequiel López nº6, 981 480021</string>
    <string name="direcc_cuartel">Rúa dos deportes nº8</string>
    <string name="descripcion_concello">O concello de Cedeira é o órgano de administración do municipio de Cedeira.
        O Concello é o órgano administrativo menor e máis próximo ó cidadán e ós seus visitantes,
        o cal busca ser un concello aberto, próximo ao día a día de todo os veciños e veciñas,
        traballando sempre do xeito máis eficaz.
        O obxectivo principal do Concello é o benestar social da veciñanza que o conforma,
        sempre apostando polo progreso social, cultural e económico do concello; e, traballando
        cos demais axentes sociais e económicos tales como outras institucións, asociacións,
        veciñanza, etc., pretendemos continuar construíndo un concello cada día máis solidario,
        máis emprendedor, máis igualitario e con maior calidade de vida.
    Utiliza el deslizable para encontrar el teléfono que desees:</string>
    <string name="title_activity_main_qr">MainQR</string>
    <string name="title_activity_main_participa">MainParticipa</string>
    <string name="title_activity_main_turismo">MainTurismo</string>
    <string name="title_activity_main_gastroniomia">MainGastroniomia</string>
    <string name="descripcion_gastronomia">Á hora de xantar ou cear, pescados e mariscos recién capturados constituen a base da gastronomía local, puro olor e sabor a mar.
Son receitas de pescado típicas de Cedeira o Rape con chícharos (Rape á Cedeira), chocos recheos, bonito en salsa, merluza en salsa verde ou o Pastelón de Cedeira (un tipo de empanada feita con hoxaldre en lugar de masa de pan, e rechea con bonito, bacallau con pasas, congro …)
Falando de mariscos e tendo en conta a fama internacional do percebe propio das nosas bravas costas, non poden esquecerse tamén as centolas, os lubrigantes, as nécoras, ou os berberechos da Vila.
Para rematar, no postre, unhas deliciosas e típicas “Eses”, saborosas galletas coas que rematar o menú, ou os brazos de xitano cos máis variados recheos…
Estas e outras delicias forman parte de xeito habitual das cartas dos locais de hostalaría da Vila, coa mellor materia prima directa do mar ao prato, e que fai as delicias dos máis esixentes comensais.
</string>
    <string name="title_activity_main_web">MainWeb</string>
    <string name="title_activity_main_carga_webs">MainCargaWebs</string>
    <string name="menu_camino_do_mar">Camiño do mar</string>
    <string name="menu_a_teixido">Dende Porto do cabo</string>
    <string name="menu_camino_vello">Camiño vello a Teixido</string>
    <string name="menu_camino_carino_teixido">Cariño-Teixido</string>
    <string name="menu_medievo">Ruta do medievo</string>
    <string name="menu_peiraos">Ruta dos Peiraos</string>
    <string name="menu_galeguistas">Perelinaxes I/Galeguistas</string>
    <string name="menu_vuelta_espana">Vuelta a España (4ª Etapa)</string>
    <string-array name="titulo_ruta">
        <item>RUTA CAMIÑO DO MAR</item>
        <item>RUTA CAMIÑO A TEIXIDO DENDE PORTO DO CABO</item>
        <item>RUTA CAMIÑO VELLO A TEIXIDO</item>
        <item>RUTA CARIÑO-TEIXIDO</item>
        <item>RUTA DO MEDIEVO</item>
        <item>RUTA DOS PEIRAOS</item>
        <item>RUTA DOS PERELINAXES I OU DOS GALEGUISTAS</item>
        <item>RUTA LA VUELTA A ESPAÑA 2016 (4ª ETAPA)</item>
    </string-array>
    <string-array name="descripcion_corta_ruta">
        <item>https://caminoasanandres.com/gl/rutas-camino-del-mar/</item>
        <item>https://caminoasanandres.com/gl/camino-porto-do-cabo-san-andres/</item>
        <item>https://caminoasanandres.com/gl/camino-vello-a-teixido/</item>
        <item>https://caminoasanandres.com/gl/ruta-carino-teixido/</item>
        <item>https://caminoasanandres.com/gl/ruta-do-medievo/</item>
        <item>https://caminoasanandres.com/gl/ruta-dos-peiraos/</item>
        <item>https://caminoasanandres.com/gl/ruta-pelerinaxes-i/</item>
        <item>https://caminoasanandres.com/gl/ruta-4a-etapa-vuelta-espana-2016/</item>
    </string-array>
    <string-array name="directorio_titulo">
        <item>Concello</item>
        <item>Policía Local</item>
        <item>Centro de Saude</item>
        <item>Servizo de Taxi</item>
        <item>Farmacias</item>
        <item>Cuartel de Garda Civil</item>
    </string-array>
    <string-array name="directorio_direccion_1">
        <item>Rúa Real nº 15</item>
        <item>Rúa Real nº 15</item>
        <item>Avenida Zumalacárregui nº 11</item>
        <item></item>
        <item>Rúa Ezequiel López nº 6, 981 480021</item>
        <item>Rúa dos deportes nº 8</item>
    </string-array>
    <string-array name="directorio_direccion_2">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Avenida Zumalacárregui nº 7, 981 480366</item>
        <item></item>
    </string-array>
    <string-array name="directorio_direccion_3">
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Avenida Zumalacárregui nº 7, 981 480366</item>
        <item></item>
    </string-array>
    <string-array name="tlf">
        <item>981 480 000</item>
        <item>981 480725 / 619309449</item>
        <item>981 480015</item>
        <item>981 480211</item>
        <item></item>
        <item>981 480113</item>
    </string-array>
    <string-array name="arroba">
        <item>correo@cedeira.es</item>
        <item>www.policialocalcedeira.wordpress.com</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="arroba2">
        <item>www.cedeira.gals</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="time">
        <item>Horario de atención ó público: L/V de 9.00h a 14.00h</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string name="title_activity_lista_tlf">ListaTlf</string>
    <string name="title_activity_turismo">Turismo</string>
    <string-array name="titulo_praias">
        <item>Praia da Magdalena</item>
        <item>Praia de Area Longa</item>
        <item>Cala de Sonrieiras</item>
        <item>Cala Burbullas</item>
    </string-array>
    <string-array name="descripcion_corta_praias">
        <item>Cunha ampla extensión de 1.300 metros, trátase dunha praia en contorna urbana. Con forma de enseada...</item>
        <item>Praia en contorno semiurbano de 490 metros situada nas inmediacións do porto de Cedeira...</item>
        <item>Pequena cala (20 metros) de difícil acceso por unha escaleira que só pode visitarse con marea baixa...</item>
        <item>Preto do Faro da Robaleira, hai que acceder a pé atravesando unha preciosa e tranquila zona boscosa por un camino estreito...</item>
    </string-array>
    <string-array name="descripcion_larga_praias">
        <item>Cunha ampla extensión de 1.300 metros, trátase dunha praia en contorna urbana. Con forma de enseada, de area branca e fina e augas tranquilas para desfrutar do baño e dos deportes acuáticos. Gorecida dos ventos.Nas inmediacións atópase o paseo marítimo con un piñeiral con mesas, bancos, parque infantil, etc. ideal para pasear e gozar da lectura.Dispón de: Aparcadoiro, duchas, servizos de vixiancia e limpeza, accesos adaptados, servizos próximos de aloxamento e hostalaría.</item>
        <item>Praia en contorno semiurbano de 490 metros situada nas inmediacións do porto de Cedeira, de area branca e fina. Protexida dos ventos e de augas tranquilas, ideais para os deportes acuáticos. Praia portuaria, con zona de fondeo de embarcacións, é perfecta para arribar despois dunha excursión en barco pola ría.Dispón de: Aparcadoiro, duchas, papeleiras, servizo de vixiancia e servizos próximos de aloxamentos e hostalaría.</item>
        <item>Pequena cala (20 metros) de difícil acceso por unha escaleira que só pode visitarse con marea baixa. Atópase situada nunha zona de moito encanto contigua a unha antiga cetárea abandonada.</item>
        <item>Preto do Faro da Robaleira, hai que acceder a pé atravesando unha preciosa e tranquila zona boscosa por un camino estreito. É unha pequena cala duns 80 metros que só pode visitarse con marea baixa e acostuma ter oleaxe forte. Na cala Burbullas disfrútase dun auga limpa e cristalina con preciosas vistas a unha espectacular paixase natural.</item>
    </string-array>
    <string-array name="praias_coord_1">
        <item>43.656648</item>
        <item>43.659842</item>
        <item>43.659188</item>
        <item>43.647226</item>
    </string-array>
    <string-array name="praias_coord_2">
        <item>-8.052917</item>
        <item>-8.067502</item>
        <item>-8.072750</item>
        <item>–8.069128</item>
    </string-array>
</resources>